tests/spec/non_conformant/errors/unicode/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/unicode"

#[allow(unused)]
fn runner() -> crate::TestRunner {
    super::runner().with_cwd("unicode")
}

mod report;
